[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/draw_gd/src/Main.gd" type="Script" id=1]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/ImageEffects/ImageEffects.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/CreateNewImage.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/draw_gd/src/UI/BrushesPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/draw_gd/src/UI/PatternsPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/draw_gd/src/UI/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/OpenSprite.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/draw_gd/src/Preferences/PreferencesDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/ExportDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/SaveSpriteHTML5.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/draw_gd/src/UI/TopMenuContainer.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/SaveSprite.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/draw_gd/src/Autoload/DrawGD.gd" type="Script" id=13]

[sub_resource type="Image" id=5]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 0, 255, 175, 255, 175, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 0, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 48, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 48, 255, 48, 255, 48, 255, 175, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 48, 255, 48, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 22,
"mipmaps": false,
"width": 22
}

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0
image = SubResource( 5 )
size = Vector2( 22, 22 )

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 132, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 132, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 175, 255, 175, 255, 175, 255, 175, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 22,
"mipmaps": false,
"width": 22
}

[sub_resource type="ImageTexture" id=4]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 22, 22 )

[node name="DrawGDControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="MenuAndUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenuContainer" parent="MenuAndUI" instance=ExtResource( 11 )]

[node name="UI" parent="MenuAndUI" instance=ExtResource( 6 )]

[node name="Dialogs" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageEffects" parent="Dialogs" instance=ExtResource( 2 )]

[node name="BrushesPopup" parent="Dialogs" instance=ExtResource( 4 )]

[node name="PatternsPopup" parent="Dialogs" instance=ExtResource( 5 )]

[node name="CreateNewImage" parent="Dialogs" instance=ExtResource( 3 )]
margin_right = 375.0

[node name="OpenSprite" parent="Dialogs" instance=ExtResource( 7 )]
current_dir = "/home/relintai/Projects/draw_gd"
current_path = "/home/relintai/Projects/draw_gd/"

[node name="SaveSprite" parent="Dialogs" instance=ExtResource( 12 )]
margin_left = 108.0
margin_top = 40.0
margin_right = 623.0
margin_bottom = 388.0

[node name="SaveSpriteHTML5" parent="Dialogs" instance=ExtResource( 10 )]

[node name="ExportDialog" parent="Dialogs" instance=ExtResource( 9 )]

[node name="PreferencesDialog" parent="Dialogs" instance=ExtResource( 8 )]
margin_right = 617.0

[node name="UnsavedCanvasDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 467.0
margin_bottom = 70.0
window_title = "Unsaved Image"
dialog_text = "You have unsaved changes. If you proceed, the progress you have made will be lost."

[node name="QuitDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 243.0
margin_bottom = 70.0
resizable = true
dialog_text = "Are you sure you want to exit Pixelorama?"

[node name="QuitAndSaveDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 330.0
margin_bottom = 70.0
window_title = "Save before exiting?"
resizable = true
dialog_text = "You have unsaved progress. How do you wish to proceed?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="Dialogs"]
margin_right = 151.0
margin_bottom = 60.0
window_title = "Error"
dialog_text = "This is an error message!"

[node name="BackupConfirmation" type="ConfirmationDialog" parent="Dialogs"]
margin_left = 429.0
margin_top = 316.0
margin_right = 851.0
margin_bottom = 404.0
rect_min_size = Vector2( 250, 87.5 )
popup_exclusive = true
dialog_text = "Autosaved backup for [user://backup-1606662249-0] was found.
Do you want to reload it?"

[node name="LeftCursor" type="Sprite" parent="."]
visible = false
position = Vector2( 795, 667 )
texture = SubResource( 2 )

[node name="RightCursor" type="Sprite" parent="."]
visible = false
position = Vector2( 859, 667 )
texture = SubResource( 4 )

[node name="ModulateTween" type="Tween" parent="."]

[node name="DrawGDSingleton" type="Node" parent="."]
script = ExtResource( 13 )

[connection signal="popup_hide" from="Dialogs/CreateNewImage" to="." method="_can_draw_true"]
[connection signal="file_selected" from="Dialogs/OpenSprite" to="." method="_on_OpenSprite_file_selected"]
[connection signal="popup_hide" from="Dialogs/OpenSprite" to="." method="_on_OpenSprite_popup_hide"]
[connection signal="file_selected" from="Dialogs/SaveSprite" to="." method="_on_SaveSprite_file_selected"]
[connection signal="popup_hide" from="Dialogs/SaveSprite" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/SaveSpriteHTML5" to="." method="_on_SaveSpriteHTML5_confirmed"]
[connection signal="popup_hide" from="Dialogs/SaveSpriteHTML5" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/ExportDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/PreferencesDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/UnsavedCanvasDialog" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/QuitDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="popup_hide" from="Dialogs/QuitDialog" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/QuitAndSaveDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="custom_action" from="Dialogs/QuitAndSaveDialog" to="." method="_on_QuitAndSaveDialog_custom_action"]
[connection signal="popup_hide" from="Dialogs/QuitAndSaveDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/ErrorDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/BackupConfirmation" to="." method="_can_draw_true"]
